--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.9.4",
     "numpy>=2.0.2",
+    "pandas>=2.2,<3",
     "scipy>=1.13.1",
 ]
